--- a/mysite/covid19/templates/home.html
+++ b/mysite/covid19/templates/home.html
@@ -5,18 +5,20 @@
     <title>covid-19 chart</title>
   </head>
   <body>
+
     <img src="data:image/png;base64,{{ data }}"
-	 alt="" height="600" ,width="600">
+	 alt="" height="500", width="700">
+
 	 <p>
-	    <strong>
-    	    Sources:
+	    <strong>Sources:
     	    <a href = "https://api.covid19api.com/country/sweden/status/confirmed"> Sweden</a> &
     	    <a href = "https://api.covid19api.com/country/norway/status/confirmed"> Norway</a>
 	    </strong>
 	 </p>
-	 <p><i>CSC 4992 Python, Dr. Tessler</i></p>
-	 <p><i>By: <a href = "https://github.com/santhosh3000"> Santhosh Abraham</a></i></p>
 
+	 <p><i>CSC 4992 Python, Dr. Tessler</i></p>
+
+	 <p><i>By: <a href = "https://github.com/santhosh3000"> Santhosh Abraham</a></i></p>
 
   </body>
 </html>
